# investment_ai_agent

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
app/: __init__.py  config.py  main.py
app/analyzers/: daily_signal_summary_analyzer.py  fundamental_event_analyzer.py  macro_context_analyzer.py  news_cluster_analyzer.py  plan_impact_analyzer.py  price_move_analyzer.py  sector_rotation_analyzer.py
app/collectors/: __init__.py  google_news_collector.py  price_collector.py  yfinance_price_collector.py
app/jobs/: __init__.py  daily_market_job.py
app/llm/: __init__.py  bedrock.py
app/models/: analysis.py  asset.py  price.py
app/outputs/: markdown_writer.py
app/storage/: db.py  schema.sql
config/: watchlist.yaml
docs/design/: local_financial_research_agent_design.md
docs/plans/: 2026-06-07-bedrock-runtime-design.md  2026-06-11-yfinance-integration-design.md  2026-06-21-macro-context-design.md  2026-06-22-important-news-clusters-design.md  2026-06-25-news-derived-fundamental-events-design.md  2026-06-28-daily-signal-summary-design.md  2026-06-28-plan-impact-review-design.md  2026-06-28-sections-4-6-detail-design.md
tests/: test_bedrock.py  test_cli.py  test_config.py  test_daily_signal_summary_analyzer.py  test_fundamental_event_analyzer.py  test_google_news_collector.py  test_macro_context_analyzer.py  test_markdown_writer.py  test_news_cluster_analyzer.py  test_news_storage.py  test_plan_impact_analyzer.py  test_price_move_analyzer.py  test_sector_rotation_analyzer.py  test_storage.py  test_yfinance_price_collector.py
(+13 files in other folders)
