[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-ai-agent"
version = "0.1.0"
description = "Local financial research assistant MVP"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34", "yfinance>=0.2.40"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
finance-agent = "app.main:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
